backend/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kowai
  labels:
    name: kowai
    app.kubernetes.io/name: kowai
    app.kubernetes.io/instance: production
